// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Botão Modal Abrir modal para visualizar multiplos gráficos.  1`] = `
<button
  aria-hidden="true"
  aria-label="expand"
  class="chakra-button css-1r29pb7"
  data-aria-hidden="true"
  title="multi-view"
  type="button"
>
  <svg
    aria-hidden="true"
    fill="currentColor"
    focusable="false"
    height="1em"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20 2H8c-1.103 0-2 .897-2 2v12c0 1.103.897 2 2 2h12c1.103 0 2-.897 2-2V4c0-1.103-.897-2-2-2zM8 16V4h12l.002 12H8z"
    />
    <path
      d="M4 8H2v12c0 1.103.897 2 2 2h12v-2H4V8zm8.933 3.519-1.726-1.726-1.414 1.414 3.274 3.274 5.702-6.84-1.538-1.282z"
    />
  </svg>
</button>
`;

exports[`Botão Modal fechar visualização de multiplos gráficos  1`] = `
<button
  aria-label="expand"
  class="chakra-button css-1r29pb7"
  title="sigle-view"
  type="button"
>
  <svg
    aria-hidden="true"
    fill="currentColor"
    focusable="false"
    height="1em"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M4 21h16c1.103 0 2-.897 2-2V5c0-1.103-.897-2-2-2H4c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2zm0-2V7h16l.001 12H4z"
    />
  </svg>
</button>
`;

exports[`Graph Tempo Personalizado Deve renderizar o grafico com a opção de tempo personalizado 1`] = `
<div
  className="css-0"
>
  <canvas
    className="Grafico"
    height={150}
    role="img"
    width={300}
  />
  <div
    className="chakra-stack css-0"
  >
    <button
      className="css-0"
      onClick={[Function]}
      placeholder="Download"
    >
      <img
        className="chakra-image css-0"
        id="screenshot-icon"
        src="images/screenshot-icon.svg"
      />
    </button>
    <a
      download="16032022074210"
      href="data:text/csv;charset=utf-8,﻿
"
      onClick={[Function]}
      target="_self"
    >
      <button
        aria-label="download"
        className="chakra-button css-0"
        type="button"
      >
        <svg
          aria-hidden={true}
          fill="none"
          focusable={false}
          height="1em"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
          />
          <polyline
            points="7 10 12 15 17 10"
          />
          <line
            x1="12"
            x2="12"
            y1="15"
            y2="3"
          />
        </svg>
      </button>
    </a>
    <button
      aria-label="compartilhar"
      className="chakra-button css-0"
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-hidden={true}
        fill="currentColor"
        focusable={false}
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 1024 1024"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M752 664c-28.5 0-54.8 10-75.4 26.7L469.4 540.8a160.68 160.68 0 0 0 0-57.6l207.2-149.9C697.2 350 723.5 360 752 360c66.2 0 120-53.8 120-120s-53.8-120-120-120-120 53.8-120 120c0 11.6 1.6 22.7 4.7 33.3L439.9 415.8C410.7 377.1 364.3 352 312 352c-88.4 0-160 71.6-160 160s71.6 160 160 160c52.3 0 98.7-25.1 127.9-63.8l196.8 142.5c-3.1 10.6-4.7 21.8-4.7 33.3 0 66.2 53.8 120 120 120s120-53.8 120-120-53.8-120-120-120zm0-476c28.7 0 52 23.3 52 52s-23.3 52-52 52-52-23.3-52-52 23.3-52 52-52zM312 600c-48.5 0-88-39.5-88-88s39.5-88 88-88 88 39.5 88 88-39.5 88-88 88zm440 236c-28.7 0-52-23.3-52-52s23.3-52 52-52 52 23.3 52 52-23.3 52-52 52z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Graph Tempo Personalizado Dias Deve renderizar o grafico com a opção de tempo personalizado em dias 1`] = `
<div
  className="css-0"
>
  <canvas
    className="Grafico"
    height={150}
    role="img"
    width={300}
  />
  <div
    className="chakra-stack css-0"
  >
    <button
      className="css-0"
      onClick={[Function]}
      placeholder="Download"
    >
      <img
        className="chakra-image css-0"
        id="screenshot-icon"
        src="images/screenshot-icon.svg"
      />
    </button>
    <a
      download="16032022074210"
      href="data:text/csv;charset=utf-8,﻿
"
      onClick={[Function]}
      target="_self"
    >
      <button
        aria-label="download"
        className="chakra-button css-0"
        type="button"
      >
        <svg
          aria-hidden={true}
          fill="none"
          focusable={false}
          height="1em"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
          />
          <polyline
            points="7 10 12 15 17 10"
          />
          <line
            x1="12"
            x2="12"
            y1="15"
            y2="3"
          />
        </svg>
      </button>
    </a>
    <button
      aria-label="compartilhar"
      className="chakra-button css-0"
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-hidden={true}
        fill="currentColor"
        focusable={false}
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 1024 1024"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M752 664c-28.5 0-54.8 10-75.4 26.7L469.4 540.8a160.68 160.68 0 0 0 0-57.6l207.2-149.9C697.2 350 723.5 360 752 360c66.2 0 120-53.8 120-120s-53.8-120-120-120-120 53.8-120 120c0 11.6 1.6 22.7 4.7 33.3L439.9 415.8C410.7 377.1 364.3 352 312 352c-88.4 0-160 71.6-160 160s71.6 160 160 160c52.3 0 98.7-25.1 127.9-63.8l196.8 142.5c-3.1 10.6-4.7 21.8-4.7 33.3 0 66.2 53.8 120 120 120s120-53.8 120-120-53.8-120-120-120zm0-476c28.7 0 52 23.3 52 52s-23.3 52-52 52-52-23.3-52-52 23.3-52 52-52zM312 600c-48.5 0-88-39.5-88-88s39.5-88 88-88 88 39.5 88 88-39.5 88-88 88zm440 236c-28.7 0-52-23.3-52-52s23.3-52 52-52 52 23.3 52 52-23.3 52-52 52z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Graph Tempo Personalizado Minuto Deve renderizar o grafico com a opção de tempo personalizado em minutos 1`] = `
<div
  className="css-0"
>
  <canvas
    className="Grafico"
    height={150}
    role="img"
    width={300}
  />
  <div
    className="chakra-stack css-0"
  >
    <button
      className="css-0"
      onClick={[Function]}
      placeholder="Download"
    >
      <img
        className="chakra-image css-0"
        id="screenshot-icon"
        src="images/screenshot-icon.svg"
      />
    </button>
    <a
      download="16032022074210"
      href="data:text/csv;charset=utf-8,﻿
"
      onClick={[Function]}
      target="_self"
    >
      <button
        aria-label="download"
        className="chakra-button css-0"
        type="button"
      >
        <svg
          aria-hidden={true}
          fill="none"
          focusable={false}
          height="1em"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
          />
          <polyline
            points="7 10 12 15 17 10"
          />
          <line
            x1="12"
            x2="12"
            y1="15"
            y2="3"
          />
        </svg>
      </button>
    </a>
    <button
      aria-label="compartilhar"
      className="chakra-button css-0"
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-hidden={true}
        fill="currentColor"
        focusable={false}
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 1024 1024"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M752 664c-28.5 0-54.8 10-75.4 26.7L469.4 540.8a160.68 160.68 0 0 0 0-57.6l207.2-149.9C697.2 350 723.5 360 752 360c66.2 0 120-53.8 120-120s-53.8-120-120-120-120 53.8-120 120c0 11.6 1.6 22.7 4.7 33.3L439.9 415.8C410.7 377.1 364.3 352 312 352c-88.4 0-160 71.6-160 160s71.6 160 160 160c52.3 0 98.7-25.1 127.9-63.8l196.8 142.5c-3.1 10.6-4.7 21.8-4.7 33.3 0 66.2 53.8 120 120 120s120-53.8 120-120-53.8-120-120-120zm0-476c28.7 0 52 23.3 52 52s-23.3 52-52 52-52-23.3-52-52 23.3-52 52-52zM312 600c-48.5 0-88-39.5-88-88s39.5-88 88-88 88 39.5 88 88-39.5 88-88 88zm440 236c-28.7 0-52-23.3-52-52s23.3-52 52-52 52 23.3 52 52-23.3 52-52 52z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Graph Tempo Personalizado Segundo Deve renderizar o grafico com a opção de tempo personalizado em segundos 1`] = `
<div
  className="css-0"
>
  <canvas
    className="Grafico"
    height={150}
    role="img"
    width={300}
  />
  <div
    className="chakra-stack css-0"
  >
    <button
      className="css-0"
      onClick={[Function]}
      placeholder="Download"
    >
      <img
        className="chakra-image css-0"
        id="screenshot-icon"
        src="images/screenshot-icon.svg"
      />
    </button>
    <a
      download="16032022074210"
      href="data:text/csv;charset=utf-8,﻿
"
      onClick={[Function]}
      target="_self"
    >
      <button
        aria-label="download"
        className="chakra-button css-0"
        type="button"
      >
        <svg
          aria-hidden={true}
          fill="none"
          focusable={false}
          height="1em"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
          />
          <polyline
            points="7 10 12 15 17 10"
          />
          <line
            x1="12"
            x2="12"
            y1="15"
            y2="3"
          />
        </svg>
      </button>
    </a>
    <button
      aria-label="compartilhar"
      className="chakra-button css-0"
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-hidden={true}
        fill="currentColor"
        focusable={false}
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 1024 1024"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M752 664c-28.5 0-54.8 10-75.4 26.7L469.4 540.8a160.68 160.68 0 0 0 0-57.6l207.2-149.9C697.2 350 723.5 360 752 360c66.2 0 120-53.8 120-120s-53.8-120-120-120-120 53.8-120 120c0 11.6 1.6 22.7 4.7 33.3L439.9 415.8C410.7 377.1 364.3 352 312 352c-88.4 0-160 71.6-160 160s71.6 160 160 160c52.3 0 98.7-25.1 127.9-63.8l196.8 142.5c-3.1 10.6-4.7 21.8-4.7 33.3 0 66.2 53.8 120 120 120s120-53.8 120-120-53.8-120-120-120zm0-476c28.7 0 52 23.3 52 52s-23.3 52-52 52-52-23.3-52-52 23.3-52 52-52zM312 600c-48.5 0-88-39.5-88-88s39.5-88 88-88 88 39.5 88 88-39.5 88-88 88zm440 236c-28.7 0-52-23.3-52-52s23.3-52 52-52 52 23.3 52 52-23.3 52-52 52z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Graph Tempo Personalizado Vazio Deve renderizar o grafico com a opção de tempo personalizado sem granularidade 1`] = `
<div
  className="css-0"
>
  <canvas
    className="Grafico"
    height={150}
    role="img"
    width={300}
  />
  <div
    className="chakra-stack css-0"
  >
    <button
      className="css-0"
      onClick={[Function]}
      placeholder="Download"
    >
      <img
        className="chakra-image css-0"
        id="screenshot-icon"
        src="images/screenshot-icon.svg"
      />
    </button>
    <a
      download="16032022074210"
      href="data:text/csv;charset=utf-8,﻿
"
      onClick={[Function]}
      target="_self"
    >
      <button
        aria-label="download"
        className="chakra-button css-0"
        type="button"
      >
        <svg
          aria-hidden={true}
          fill="none"
          focusable={false}
          height="1em"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
          />
          <polyline
            points="7 10 12 15 17 10"
          />
          <line
            x1="12"
            x2="12"
            y1="15"
            y2="3"
          />
        </svg>
      </button>
    </a>
    <button
      aria-label="compartilhar"
      className="chakra-button css-0"
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-hidden={true}
        fill="currentColor"
        focusable={false}
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 1024 1024"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M752 664c-28.5 0-54.8 10-75.4 26.7L469.4 540.8a160.68 160.68 0 0 0 0-57.6l207.2-149.9C697.2 350 723.5 360 752 360c66.2 0 120-53.8 120-120s-53.8-120-120-120-120 53.8-120 120c0 11.6 1.6 22.7 4.7 33.3L439.9 415.8C410.7 377.1 364.3 352 312 352c-88.4 0-160 71.6-160 160s71.6 160 160 160c52.3 0 98.7-25.1 127.9-63.8l196.8 142.5c-3.1 10.6-4.7 21.8-4.7 33.3 0 66.2 53.8 120 120 120s120-53.8 120-120-53.8-120-120-120zm0-476c28.7 0 52 23.3 52 52s-23.3 52-52 52-52-23.3-52-52 23.3-52 52-52zM312 600c-48.5 0-88-39.5-88-88s39.5-88 88-88 88 39.5 88 88-39.5 88-88 88zm440 236c-28.7 0-52-23.3-52-52s23.3-52 52-52 52 23.3 52 52-23.3 52-52 52z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Graph Tempo Predefinido Deve renderizar o grafico com a opção de tempo predefinido 1`] = `
<div
  className="css-0"
>
  <canvas
    className="Grafico"
    height={150}
    role="img"
    width={300}
  />
  <div
    className="chakra-stack css-0"
  >
    <button
      className="css-0"
      onClick={[Function]}
      placeholder="Download"
    >
      <img
        className="chakra-image css-0"
        id="screenshot-icon"
        src="images/screenshot-icon.svg"
      />
    </button>
    <a
      download="16032022074210"
      href="data:text/csv;charset=utf-8,﻿
"
      onClick={[Function]}
      target="_self"
    >
      <button
        aria-label="download"
        className="chakra-button css-0"
        type="button"
      >
        <svg
          aria-hidden={true}
          fill="none"
          focusable={false}
          height="1em"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
          />
          <polyline
            points="7 10 12 15 17 10"
          />
          <line
            x1="12"
            x2="12"
            y1="15"
            y2="3"
          />
        </svg>
      </button>
    </a>
    <button
      aria-label="compartilhar"
      className="chakra-button css-0"
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-hidden={true}
        fill="currentColor"
        focusable={false}
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 1024 1024"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M752 664c-28.5 0-54.8 10-75.4 26.7L469.4 540.8a160.68 160.68 0 0 0 0-57.6l207.2-149.9C697.2 350 723.5 360 752 360c66.2 0 120-53.8 120-120s-53.8-120-120-120-120 53.8-120 120c0 11.6 1.6 22.7 4.7 33.3L439.9 415.8C410.7 377.1 364.3 352 312 352c-88.4 0-160 71.6-160 160s71.6 160 160 160c52.3 0 98.7-25.1 127.9-63.8l196.8 142.5c-3.1 10.6-4.7 21.8-4.7 33.3 0 66.2 53.8 120 120 120s120-53.8 120-120-53.8-120-120-120zm0-476c28.7 0 52 23.3 52 52s-23.3 52-52 52-52-23.3-52-52 23.3-52 52-52zM312 600c-48.5 0-88-39.5-88-88s39.5-88 88-88 88 39.5 88 88-39.5 88-88 88zm440 236c-28.7 0-52-23.3-52-52s23.3-52 52-52 52 23.3 52 52-23.3 52-52 52z"
        />
      </svg>
    </button>
  </div>
</div>
`;
